--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -99,6 +99,11 @@ body {
 	padding-bottom: 3rem;
 }
 
+.imagenAplicacion{
+	max-width: 150px;
+	max-height: 150px;
+}
+
 /* ----- BLOG ----- */
 
 .blog__imagen{
